# syslog

./: ChangeLog  bootstrap  configure.ac
src/: Makefile.am  syslogd.c
